# SalaryApi

./: .gitignore  README.md  pyproject.toml
SalaryApp/: .env
SalaryApp/migrations/: env.py
SalaryApp/migrations/versions/: 2a8ac3ce4c7a_database_upgrade1.py  416bd64b79d5_database_create.py  776f87393deb_database_upgrade3.py  fd1687fdcae1_database_upgrade2.py
SalaryApp/src/: database.py  main.py
SalaryApp/src/auth/: base_config.py  manager.py  models.py  schemas.py  utils.py
SalaryApp/src/salary/: models.py  router.py  schemas.py
