[tool.poetry]
name = "fastapitest"
version = "0.1.0"
description = ""
authors = ["Bekzod Olimov <Olimov.bekzod.2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
fastapi = {extras = ["all"], version = "^0.97.0"}
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
